# easySDI

./: README.md
1.0/joomla/1.5/: install.easysdi_proxy.php  install.xml  toolbar.easysdi.php
3.1.0/: build.xml  script.php
3.1.0/user/: easysdi.xml
java/easysdi/: pom.xml
joomla/2.5/: extension.xml  manifest.xml
joomla/easysdi/: build.xml
migration/: .project  talend.project
migration/context/: destination_0.1.item  destination_0.1.properties  source_0.1.item  variable_migration_0.1.item  variable_migration_0.1.properties
migration/process/: allList_0.1.item  allList_0.1.properties  application_0.1.item  application_0.1.properties  application_0.1.screenshot  attribute_0.1.properties  attribute_0.1.screenshot  boundaryCategory_0.1.item  boundaryCategory_0.1.properties  boundaryCategory_0.1.screenshot  boundary_0.1.properties  classmigr_0.1.item  classmigr_0.1.properties  classmigr_0.1.screenshot  codeValue_0.1.properties  codeValue_0.1.screenshot  contextCriteria_0.1.screenshot  contextObjectType_0.1.properties  contextObjectType_0.1.screenshot  contextScFilter_0.1.item  contextScFilter_0.1.screenshot  contextSort_0.1.item  context_0.1.item  context_0.1.properties  context_0.1.screenshot  defaultValue_0.1.item  defaultValue_0.1.properties  importRef_0.1.item  importRef_0.1.properties  language_0.1.properties  language_0.1.screenshot  namespace_0.1.item  namespace_0.1.properties  objectTypeLink_0.1.properties  objectType_0.1.item  objectType_0.1.properties  objectType_0.1.screenshot  orchestration_0.1.properties  orchestration_0.1.screenshot  profile_0.1.item  (+8 more)
sandboxes/depth.fr/tp/rc5/com_easysdi_core/src/administrator/libraries/gemetclient-2.0.0/: CMakeLists.txt
syncml/doc/: Funambol DB Connector Design Document.sxw  Getting Funambol DB Connector Running.sxw  SyncDBTable Installation Guide.odt
tags/4.0.0-beta-1/: build.xml
(+24019 files in other folders)
